--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <li class="navbar2"><a href="page4.html">Favorite Experiences &nbsp;</a></li>
   <li class="navbar2"><a href="page5.html">Contact Me &nbsp;</a></li>
 </ul>
-<img src= "snow.jpg"alt= "two people on a mountain"
+<img src= "https://codehs.com/uploads/7b825c6d8826744d0a3f8c29032d8a9c"alt= "two people on a mountain"
 class="center">
 
 
