--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
 </ul>
 <p class="inter"> I started snowboarding when I was about 8 years old and I liked it a lot.<br>
 I always enjoyed ripping down the hill with my brother, dad and friends.</p>
-<img src= "topofmtn.jpg"alt= "four people on a mountain"
+<img src= "https://codehs.com/uploads/2fa240482de869b50f7478a5689a4f0b"alt= "four people on a mountain"
 class="center">
 </body>
 </html>
