--- a/page3.html
+++ b/page3.html
@@ -27,7 +27,7 @@
     
   </tr>
   <tr>
-    <td>1.Breckenridge <img src= "breck.png"alt= "Picture of breckenridge
+    <td>1.Breckenridge <img src= "https://codehs.com/uploads/562038f255a537c5555d58424d943616"alt= "Picture of breckenridge
 mountain resort"
 width= "300px"></td></td>
     <td>Breckenridge is one of my favorite mountains because of how close it is and how fun it is to explore.
