--- a/page3.html
+++ b/page3.html
@@ -35,7 +35,7 @@ width= "300px"></td></td>
     
   </tr>
   <tr>
-    <td>2.Crested Butte <img src= "crested.png"alt= "Picture of crested butte mountain resort"
+    <td>2.Crested Butte <img src= "https://codehs.com/uploads/6ab8d8fa30a6113ae331032d666bdf21"alt= "Picture of crested butte mountain resort"
 width= "300px"></td></td>
     <td>Crested Butte is a smaller, lesser known resort in colorado.
     I like it because it is not always as crowded as much as the bigger resorts, and the town of Crested Butte is very mice.</td>
