--- a/page3.html
+++ b/page3.html
@@ -42,7 +42,7 @@ width= "300px"></td></td>
     
   </tr>
   <tr>
-    <td>3.Copper Mountain  <img src= "copper.jpg"alt= "Picture of copper mountain resort"
+    <td>3.Copper Mountain  <img src= "https://codehs.com/uploads/4b2618bb315336a3ae6f18d322ad2ee9"alt= "Picture of copper mountain resort"
 width= "300px"></td>
 
     <td>I have only been to Copper a few times but i ended up liking it a lot because of its freestlye terrain.
