--- a/page4.html
+++ b/page4.html
@@ -27,7 +27,7 @@ there are so many things to do and explore especially when your doing them with<
 </ul>
 <p class="inter">These things make the funnest sports in the world that more exiting.
 My favorite experiences on the mountain come when I am on the hill with my buddies or family.</p>
-<img src= "chairlift.jpg"alt= "two people on a mountain"
+<img src= "https://codehs.com/uploads/e3c3f140b6094efd143a95c8943f3fbc"alt= "four people on a chairlift"
 class="center">
 </body>
 </html>
